tests/snapshots/file@if@class_in_then.lox.snap
---
source: tests/common/mod.rs
description: "// [line 2] Error at 'class': Expect expression.\nif (true) class Foo {}\n"
input_file: crafting_interpreters_test_files/if/class_in_then.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found 'class'
   ╭─[2:11]
 1 │ // [line 2] Error at 'class': Expect expression.
 2 │ if (true) class Foo {}
   ·           ──┬──
   ·             ╰── here
   ╰────
