tests/snapshots/file@if@fun_in_then.lox.snap
---
source: tests/common/mod.rs
description: "// [line 2] Error at 'fun': Expect expression.\nif (true) fun foo() {}\n"
input_file: crafting_interpreters_test_files/if/fun_in_then.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found 'fun'
   ╭─[2:11]
 1 │ // [line 2] Error at 'fun': Expect expression.
 2 │ if (true) fun foo() {}
   ·           ─┬─
   ·            ╰── here
   ╰────
