tests/snapshots/file@if@var_in_then.lox.snap
---
source: tests/common/mod.rs
description: "// [line 2] Error at 'var': Expect expression.\nif (true) var foo;\n"
input_file: crafting_interpreters_test_files/if/var_in_then.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false, this', found 'var'
   ╭─[2:11]
 1 │ // [line 2] Error at 'var': Expect expression.
 2 │ if (true) var foo;
   ·           ─┬─
   ·            ╰── here
   ╰────
